--- a/source/weather.css
+++ b/source/weather.css
@@ -4,11 +4,16 @@ body {
 
 top-half {
   font-family: 'IBM Plex Sans', sans-serif;
+  background-image: linear-gradient(#4980dc, #623b9c); 
 }
+
 
 bottom-half {
   font-family: 'Saira Extra Condensed', sans-serif; 
+  background-image: linear-gradient(lightgray, white);
+
 }
 
 main {
+  
 }
