--- a/source/weather.css
+++ b/source/weather.css
@@ -2,6 +2,18 @@ body {
   min-height: 100vh;
 }
 
+header {
+  font-size: 45px;
+  color: white;
+  padding-bottom: 45px;
+  line-height: 1.6
+}
+
+h2 {
+  font-size: 33px;
+  color: #2D3091;
+}
+
 top-half {
   font-family: 'IBM Plex Sans', sans-serif;
   background-image: linear-gradient(#4980dc, #623b9c); 
