--- a/source/weather.css
+++ b/source/weather.css
@@ -15,15 +15,16 @@ h2 {
 }
 
 top-half {
+  display:flex;
   font-family: 'IBM Plex Sans', sans-serif;
-  background-image: linear-gradient(#4980dc, #623b9c); 
+  background-image: linear-gradient(#4980dc, #623b9c);
 }
 
 
 bottom-half {
+  display:flex;
   font-family: 'Saira Extra Condensed', sans-serif; 
   background-image: linear-gradient(lightgray, white);
-
 }
 
 main {
