--- a/source/weather.css
+++ b/source/weather.css
@@ -5,18 +5,26 @@ body {
 header {
   font-size: 45px;
   color: white;
-  padding-bottom: 45px;
-  line-height: 1.6
+  padding-top: 45px;
+  padding-bottom: 12px;
+  width: 100%;
+  line-height: 1.2;
 }
 
 h2 {
-  font-size: 33px;
+  font-size: 20px;
   color: #2D3091;
+  padding-bottom: 32px;
+  width: 100%;
 }
 
 top-half {
   display:flex;
+  flex-wrap: wrap;
+  width: 100%;
+  text-align: center;
   font-family: 'IBM Plex Sans', sans-serif;
+  color: white;
   background-image: linear-gradient(#4980dc, #623b9c);
 }
 
@@ -29,4 +37,19 @@ bottom-half {
 
 main {
   
+}
+
+/* For non-mobile views, set to be "display: none;" */
+.mobile-header-text {
+  display: block;
+}
+
+.non-mobile-header-text {
+  display: none;
+}
+
+.forecast {
+  font-size: 22px;
+  flex-wrap: wrap;
+  width: 100%;
 }
