--- a/source/weather.css
+++ b/source/weather.css
@@ -3,6 +3,7 @@ body {
 }
 
 header {
+  text-align: center;
   font-size: 45px;
   color: white;
   padding-top: 45px;
@@ -12,6 +13,7 @@ header {
 }
 
 h2 {
+  text-align: center;
   font-size: 20px;
   color: #2D3091;
   padding-bottom: 32px;
@@ -22,7 +24,6 @@ top-half {
   display:flex;
   flex-wrap: wrap;
   width: 100%;
-  text-align: center;
   font-family: 'IBM Plex Sans', sans-serif;
   color: white;
   background-image: linear-gradient(#4980dc, #623b9c);
@@ -68,9 +69,10 @@ main {
 
 /* Hide this on non-mobile views using display: none */
 .input-mobile {
+    text-align: left;
     width: 55%;
-    margin-right: 20%;
-    padding-top: 10px;
+    margin-left: 12%;
+    height: 33px;
     border: none;
     font-weight: lighter;
     color: whitesmoke;
@@ -78,7 +80,7 @@ main {
 }
 
 .button-style {
-    height: 26px;
+    height: 35px;
     width: 15%;
     color: #E6E5E3;
     border: none;
