--- a/source/weather.css
+++ b/source/weather.css
@@ -69,8 +69,9 @@ main {
 
 /* Hide this on non-mobile views using display: none */
 .input-mobile {
-    text-align: left;
-    width: 55%;
+    text-align: center;
+    font-size: 20px;
+    width: 54%;
     margin-left: 12%;
     height: 33px;
     border: none;
@@ -80,8 +81,9 @@ main {
 }
 
 .button-style {
-    height: 35px;
-    width: 15%;
+    height: 34px;
+    font-size: 16px;
+    width: 20%;
     color: #E6E5E3;
     border: none;
     background-color: #7B92D5;
@@ -99,8 +101,41 @@ main {
 
 .fewclouds-day {
     padding-top: 50px;
+    padding-bottom: 30px;
     width: 100%;
     margin-left: 50%;
+}
+
+.time-and-temp {
+    display: flex;
+    flex-direction: row;
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-weight: 300;
+    line-height: 1.3;
+    text-align: center;
+    margin-left: 50%;
+    width: 100%;
+    padding-bottom: 100px;
+}
+
+.time {
+    flex-direction: column;
+    font-size: 35px;
+    margin-top: 10px;
+}
+
+
+.vertical-line {
+    color: black;
+    font-size: 86px;
+    font-weight: 100;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.temperature {
+    font-size: 85px;
+    margin-top: 4px;
 }
 
 /* hide this on mobile-view */
