--- a/source/weather.css
+++ b/source/weather.css
@@ -75,8 +75,9 @@ main {
     margin-left: 12%;
     height: 33px;
     border: none;
-    font-weight: lighter;
-    color: whitesmoke;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 300;
+    color: white;
     background-color: #2E3192;
 }
 
@@ -110,7 +111,7 @@ main {
     display: flex;
     flex-direction: row;
     font-family: 'Saira Extra Condensed', sans-serif;
-    font-weight: 300;
+    font-weight: 100;
     line-height: 1.3;
     text-align: center;
     margin-left: 50%;
