--- a/source/weather.css
+++ b/source/weather.css
@@ -2,144 +2,151 @@ body {
   min-height: 100vh;
 }
 
-header {
-  text-align: center;
-  font-size: 45px;
-  color: white;
-  padding-top: 45px;
-  padding-bottom: 12px;
-  width: 100%;
-  line-height: 1.2;
-}
+@media (max-width: 480px) {
 
-h2 {
-  text-align: center;
-  font-size: 20px;
-  color: #2D3091;
-  padding-bottom: 32px;
-  width: 100%;
-}
+    header {
+        text-align: center;
+        font-size: 2.8em;
+        color: white;
+        padding-top: 1.5em;
+        padding-bottom: 3%;
+        width: 100%;
+        line-height: 1.2;
+    }
 
-top-half {
-  display:flex;
-  flex-wrap: wrap;
-  width: 100%;
-  font-family: 'IBM Plex Sans', sans-serif;
-  color: white;
-  background-image: linear-gradient(#4980dc, #623b9c);
-}
+    h2 {
+        text-align: center;
+        font-size: larger;
+        font-weight: 500;
+        color: #2D3091;
+        padding-bottom: 7%;
+        width: 100%;
+        margin-right: 2%;
+    }
+
+    top-half {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        font-family: 'IBM Plex Sans', sans-serif;
+        color: white;
+        background-image: linear-gradient(#4980dc, #623b9c);
+    }
 
 
-bottom-half {
-  display:flex;
-  font-family: 'Saira Extra Condensed', sans-serif; 
-  background-image: linear-gradient(lightgray, white);
-}
+    bottom-half {
+        display: flex;
+        font-family: 'Saira Extra Condensed', sans-serif;
+        background-image: linear-gradient(lightgray, white);
+    }
 
-main {
-  
-}
+    main {
 
-/* For non-mobile views, set to be "display: none;" */
-.mobile-header-text {
-  display: block;
-}
+    }
 
-.non-mobile-header-text {
-  display: none;
-}
+    /* For non-mobile views, set to be "display: none;" */
+    .mobile-header-text {
+        display: block;
+    }
 
-.forecast {
-  flex-direction: column;
-  width: 100%;
-}
+    .non-mobile-header-text {
+        display: none;
+    }
 
-.forecast-text {
-  font-size: 22px;
-  text-align: left;
-  margin-left: 12%;
-  padding-bottom: 22px;
-}
+    /* For non-mobile views: change flex-direction to column, and use flex-wrap */
+    .forecast {
+        flex-direction: column;
+        width: 100%;
+    }
 
-.container {
-    flex-direction: row;
-    align-content: flex-start;
+    .forecast-text {
+        font-size: 1.8em;
+        text-align: left;
+        margin-left: 13%;
+        padding-bottom: 22px;
+    }
     
-}
+    .input-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 
-/* Hide this on non-mobile views using display: none */
-.input-mobile {
-    text-align: center;
-    font-size: 20px;
-    width: 54%;
-    margin-left: 12%;
-    height: 33px;
-    border: none;
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 300;
-    color: white;
-    background-color: #2E3192;
-}
+    /* Hide this on non-mobile views using display: none */
+    .input-mobile {
+        text-align: center;
+        font-size: x-large;
+        width: 54%;
+        margin-left: 13%;
+        height: 1.38em;
+        border: none;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 300;
+        color: white;
+        background-color: #2E3192;
+    }
 
-.button-style {
-    height: 34px;
-    font-size: 16px;
-    width: 20%;
-    color: #E6E5E3;
-    border: none;
-    background-color: #7B92D5;
-}
+    .button-style {
+        width: 22%;
+        height: 1.8em;
+        text-align: center;
+        font-size: larger;
+        color: #E6E5E3;
+        border: none;
+        background-color: #7B92D5;
+    }
 
-.weather-and-doppler-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+    .weather-and-doppler-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
-.weather {
-    flex-direction: column;
-}
+    .weather {
+        flex-direction: column;
+    }
 
-.fewclouds-day {
-    padding-top: 50px;
-    padding-bottom: 30px;
-    width: 100%;
-    margin-left: 50%;
-}
+    .fewclouds-day {
+        padding-top: 50px;
+        padding-bottom: 30px;
+        width: 100%;
+        
+    }
 
-.time-and-temp {
-    display: flex;
-    flex-direction: row;
-    font-family: 'Saira Extra Condensed', sans-serif;
-    font-weight: 100;
-    line-height: 1.3;
-    text-align: center;
-    margin-left: 50%;
-    width: 100%;
-    padding-bottom: 100px;
-}
+    .time-and-temp {
+        display: flex;
+        flex-direction: row;
+        font-family: 'Saira Extra Condensed', sans-serif;
+        font-weight: 100;
+        line-height: 1.3;
+        text-align: center;
+        width: 100%;
+        padding-bottom: 100px;
+    }
 
-.time {
-    flex-direction: column;
-    font-size: 35px;
-    margin-top: 10px;
-}
+    .time {
+        flex-direction: column;
+        font-size: 3em;
+        margin-top: 10px;
+    }
 
 
-.vertical-line {
-    color: black;
-    font-size: 86px;
-    font-weight: 100;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+    .vertical-line {
+        color: black;
+        font-size: 7em;
+        font-weight: 100;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
-.temperature {
-    font-size: 85px;
-    margin-top: 4px;
-}
+    .temperature {
+        font-size: 7em;
+        margin-top: 4px;
+    }
 
-/* hide this on mobile-view */
-.doppler {
-    display: none;
+    /* hide this on mobile-view */
+    .doppler {
+        display: none;
+    }
 }
