--- a/source/weather.css
+++ b/source/weather.css
@@ -34,10 +34,13 @@ body {
     }
 
 
+    /* gradient not used for mobile */
     bottom-half {
         display: flex;
+        flex-direction: column;
+        width: 100%;
         font-family: 'Saira Extra Condensed', sans-serif;
-        background-image: linear-gradient(lightgray, white);
+        /* background-image: linear-gradient(lightgray, white); */
     }
 
     main {
@@ -122,7 +125,7 @@ body {
         line-height: 1.3;
         text-align: center;
         width: 100%;
-        padding-bottom: 100px;
+        padding-bottom: 2em;
     }
 
     .time {
@@ -153,11 +156,25 @@ body {
     .arrow-container {
         width: 100%;
         padding-bottom: 1.5em;
+        padding-top: 1.5em;
     }
     
     .arrow-img {
         display: block;
         width: 10%;
         margin: auto;
+    }
+    
+    .hourly-forecast {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    hr {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        color: black;
+        width: 99%;
     }
 }
