--- a/source/weather.css
+++ b/source/weather.css
@@ -191,7 +191,7 @@ body {
         flex-direction: column;
     }
 
-    .fewclouds-day {
+    .current-image {
         padding-top: 50px;
         padding-bottom: 30px;
         width: 100%;
@@ -294,7 +294,7 @@ body {
     }
 }
 
-@media (min-width: 481px) and (max-width: 790px) {
+@media (min-width: 481px) and (max-width: 790px){
 
     header {
         text-align: center;
@@ -326,35 +326,8 @@ body {
         position: absolute;
     }
 
-/*    .top-half-transform {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        font-family: 'IBM Plex Sans', sans-serif;
-        color: white;
-        background-image: linear-gradient(#4980dc, #623b9c);
-
-        position: absolute;
-        animation-name: swipe;
-        animation-fill-mode: forwards;
-        animation-duration: 1.2s;
-    }
-
-    .top-half-transform-reverse {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        font-family: 'IBM Plex Sans', sans-serif;
-        color: white;
-        background-image: linear-gradient(#4980dc, #623b9c);
-
-        position: absolute;
-        animation-name: swipe-reverse;
-        animation-fill-mode: forwards;
-        animation-duration: 1.2s;
-    }*/
-
     /* gradient not used for mobile */
+    /* on non-mobile views, use flex-direction: row */
     .bottom-half {
         display: none;
         flex-direction: column;
@@ -365,31 +338,29 @@ body {
         /* background-image: linear-gradient(lightgray, white); */
     }
 
-/*    .bottom-half-transform {
+    /*On non-mobile views, use flex-direction: column*/
+    .bottom-item {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         width: 100%;
-        position: absolute;
-        font-family: 'Saira Extra Condensed', sans-serif;
-        !* background-image: linear-gradient(lightgray, white); *!
-
-        animation-name: move-up;
-        animation-fill-mode: forwards;
-        animation-duration: 1.2s;
+        font-weight: 300;
+        justify-content: space-around;
     }
 
-    .bottom-half-transform-reverse {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        position: absolute;
-        font-family: 'Saira Extra Condensed', sans-serif;
-        !* background-image: linear-gradient(lightgray, white); *!
+    .bottom-item-time {
+        font-size: 2em;
+        margin-top: 10%;
+    }
 
-        animation-name: move-down;
-        animation-fill-mode: forwards;
-        animation-duration: 1.2s;
-    }*/
+    .bottom-item-image {
+        display: block;
+        width: 20%;
+    }
+
+    .bottom-item-temperature {
+        font-size: 6em;
+        margin-top: 3%;
+    }
 
     main {
 
@@ -458,7 +429,7 @@ body {
         flex-direction: column;
     }
 
-    .fewclouds-day {
+    .current-image {
         padding-top: 50px;
         padding-bottom: 30px;
         width: 100%;
@@ -513,56 +484,10 @@ body {
         margin: auto;
     }
 
-    .hourly-forecast {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-
     hr {
         margin-top: 5%;
         margin-bottom: 5%;
         color: black;
         width: 99%;
     }
-
-/*    @keyframes swipe {
-        from {
-            bottom: 0%;
-        }
-
-        to {
-            bottom: 100%;
-        }
-    }
-
-    @keyframes swipe-reverse {
-        from {
-            bottom: 100%;
-        }
-
-        to {
-            bottom: 0%;
-        }
-    }
-
-    @keyframes move-up {
-        from {
-            top: 100%;
-        }
-
-        to {
-            top: 0%;
-        }
-    }
-
-    @keyframes move-down {
-        from {
-            top: 0%;
-        }
-
-        to {
-            top: 100%;
-        }
-    }*/
 }
