--- a/source/weather.css
+++ b/source/weather.css
@@ -17,7 +17,7 @@ body {
     h2 {
         text-align: center;
         font-size: larger;
-        font-weight: 500;
+        font-weight: 700;
         color: #2D3091;
         padding-bottom: 7%;
         width: 100%;
@@ -33,7 +33,7 @@ body {
         background-image: linear-gradient(#4980dc, #623b9c);
         position: absolute;
     }
-    
+
     .top-half-transform {
         display: flex;
         flex-wrap: wrap;
@@ -41,7 +41,7 @@ body {
         font-family: 'IBM Plex Sans', sans-serif;
         color: white;
         background-image: linear-gradient(#4980dc, #623b9c);
-        
+
         position: absolute;
         animation-name: swipe;
         animation-fill-mode: forwards;
@@ -55,7 +55,7 @@ body {
         font-family: 'IBM Plex Sans', sans-serif;
         color: white;
         background-image: linear-gradient(#4980dc, #623b9c);
-        
+
         position: absolute;
         animation-name: swipe-reverse;
         animation-fill-mode: forwards;
@@ -82,22 +82,22 @@ body {
         font-weight: 300;
         justify-content: space-around;
     }
-    
+
     .bottom-item-time {
         font-size: 2em;
         margin-top: 10%;
     }
-    
+
     .bottom-item-image {
         display: block;
         width: 20%;
     }
-    
+
     .bottom-item-temperature {
         font-size: 6em;
         margin-top: 3%;
     }
-    
+
     .bottom-half-transform {
         display: flex;
         flex-direction: column;
@@ -105,7 +105,7 @@ body {
         position: absolute;
         font-family: 'Saira Extra Condensed', sans-serif;
         /* background-image: linear-gradient(lightgray, white); */
-        
+
         animation-name: move-up;
         animation-fill-mode: forwards;
         animation-duration: 1.2s;
@@ -118,7 +118,7 @@ body {
         position: absolute;
         font-family: 'Saira Extra Condensed', sans-serif;
         /* background-image: linear-gradient(lightgray, white); */
-        
+
         animation-name: move-down;
         animation-fill-mode: forwards;
         animation-duration: 1.2s;
@@ -143,8 +143,13 @@ body {
         width: 100%;
     }
 
-    .forecast-text {
-        font-size: 1.8em;
+    div.forecast-input-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    p.forecast-text {
+        font-size: 1.5em;
         text-align: left;
         margin-left: 13%;
         padding-bottom: 22px;
@@ -157,7 +162,7 @@ body {
     }
 
     /* Hide this on non-mobile views using display: none */
-    .input-mobile {
+    .input-field {
         text-align: center;
         font-size: x-large;
         width: 54%;
@@ -233,26 +238,26 @@ body {
     .doppler {
         display: none;
     }
-    
+
     .arrow-container {
         width: 100%;
         padding-bottom: 1.5em;
         padding-top: 1.5em;
     }
-    
+
     .arrow-img {
         display: block;
         width: 10%;
         margin: auto;
     }
-    
+
     hr {
         margin-top: 5%;
         margin-bottom: 5%;
         color: black;
         width: 99%;
     }
-    
+
     @keyframes swipe {
         from {
             bottom: 0%;
@@ -272,7 +277,7 @@ body {
             bottom: 0%;
         }
     }
-    
+
     @keyframes move-up {
         from {
             top: 100%;
@@ -301,17 +306,17 @@ body {
         font-size: 2.8em;
         color: white;
         padding-top: 1.5em;
-        padding-bottom: 3%;
+        padding-bottom: 1.5%;
         width: 100%;
         line-height: 1.2;
     }
 
     h2 {
         text-align: center;
-        font-size: larger;
-        font-weight: 500;
+        font-size: 2.2em;
+        font-weight: 700;
         color: #2D3091;
-        padding-bottom: 7%;
+        padding-bottom: 4%;
         width: 100%;
         margin-right: 2%;
     }
@@ -329,13 +334,11 @@ body {
     /* gradient not used for mobile */
     /* on non-mobile views, use flex-direction: row */
     .bottom-half {
-        display: none;
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
         width: 100%;
-        position: absolute;
-        bottom: 100%;
         font-family: 'Saira Extra Condensed', sans-serif;
-        /* background-image: linear-gradient(lightgray, white); */
+        background-image: linear-gradient(lightgray, white);
     }
 
     /*On non-mobile views, use flex-direction: column*/
@@ -368,38 +371,43 @@ body {
 
     /* For non-mobile views, set to be "display: none;" */
     .mobile-header-text {
-        display: block;
+        display: none;
     }
 
     .non-mobile-header-text {
-        display: none;
+        display: block;
     }
 
     /* For non-mobile views: change flex-direction to column, and use flex-wrap */
     .forecast {
         flex-direction: column;
+        flex-wrap: wrap;
         width: 100%;
     }
 
-    .forecast-text {
-        font-size: 1.8em;
+    div.forecast-input-container {
+        display: flex;
+        flex-direction: row;
+    }
+
+    p.forecast-text {
+        font-size: 1.5em;
         text-align: left;
-        margin-left: 13%;
+        margin-left: 15%;
         padding-bottom: 22px;
     }
 
     .input-container {
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        width: 60%;
     }
 
-    /* Hide this on non-mobile views using display: none */
-    .input-mobile {
+    .input-field {
         text-align: center;
         font-size: x-large;
-        width: 54%;
-        margin-left: 13%;
+        width: 75%;
+        margin-left: 3%;
         height: 1.38em;
         border: none;
         font-family: 'IBM Plex Sans', sans-serif;
@@ -409,8 +417,9 @@ body {
     }
 
     .button-style {
-        width: 22%;
+        width: 25%;
         height: 1.8em;
+        margin-left: 5%;
         text-align: center;
         font-size: larger;
         color: #E6E5E3;
@@ -421,12 +430,13 @@ body {
     .weather-and-doppler-container {
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-around;
     }
 
     .weather {
         flex-direction: column;
+        width: 60%;
+        margin-left: 10%;
     }
 
     .current-image {
@@ -469,7 +479,16 @@ body {
 
     /* hide this on mobile-view */
     .doppler {
-        display: none;
+        width: 60%;
+        margin-right: 10%;
+        margin-left: 5%;
+    }
+
+    img.doppler {
+        width: 100%;
+        filter: grayscale(100%);
+        border-radius: 50%;
+        margin-top: 20%;
     }
 
     .arrow-container {
@@ -479,15 +498,15 @@ body {
     }
 
     .arrow-img {
-        display: block;
+        display: none;
         width: 10%;
         margin: auto;
     }
 
     hr {
-        margin-top: 5%;
-        margin-bottom: 5%;
-        color: black;
-        width: 99%;
+        border: none;
+        border-left: 1px solid ghostwhite;
+        height: 100vh;
+        width: 1px;
     }
 }
