--- a/source/weather.css
+++ b/source/weather.css
@@ -334,35 +334,39 @@ body {
     /* gradient not used for mobile */
     /* on non-mobile views, use flex-direction: row */
     .bottom-half {
-        display: none;
+        display: flex;
         flex-direction: row;
         width: 100%;
+        position: absolute;
+        top: 105%;
         font-family: 'Saira Extra Condensed', sans-serif;
-        background-image: linear-gradient(lightgray, white);
+        background-image: linear-gradient(gray 0%, white 25%);
     }
 
     /*On non-mobile views, use flex-direction: column*/
     .bottom-item {
         display: flex;
-        flex-direction: row;
-        width: 100%;
+        flex-direction: column;
+        width: 20%;
         font-weight: 300;
-        justify-content: space-around;
+        justify-content: center;
+        margin-left: 4%;
     }
 
     .bottom-item-time {
-        font-size: 2em;
-        margin-top: 10%;
+        font-size: 4vw;
+        margin-top: 50%;
     }
 
     .bottom-item-image {
         display: block;
-        width: 20%;
+        width: 75%;
+        margin-top: 50%;
+        margin-bottom: 50%;
     }
 
     .bottom-item-temperature {
-        font-size: 6em;
-        margin-top: 3%;
+        font-size: 10vw;
     }
 
     main {
@@ -442,7 +446,7 @@ body {
     .current-image {
         padding-top: 50px;
         padding-bottom: 30px;
-        width: 100%;
+        width: 40vw;
 
     }
 
@@ -492,21 +496,21 @@ body {
     }
 
     .arrow-container {
-        width: 100%;
+        width: 0%;
         padding-bottom: 1.5em;
         padding-top: 1.5em;
     }
 
     .arrow-img {
         display: none;
-        width: 10%;
+        width: 0%;
         margin: auto;
     }
 
     hr {
         border: none;
-        border-left: 1px solid ghostwhite;
-        height: 100vh;
+        border-left: 1px solid darkslategrey;
+        height: 50vh;
         width: 1px;
     }
 }
