--- a/source/weather.css
+++ b/source/weather.css
@@ -482,17 +482,32 @@ body {
 
     /* hide this on mobile-view */
     .doppler {
+        position: relative;
+        display: inline;
         width: 60%;
         margin-right: 10%;
         margin-left: 5%;
+      
+
     }
 
     img.doppler {
+        position: absolute;
         width: 100%;
         filter: grayscale(100%);
         border-radius: 50%;
         margin-top: 20%;
+        bottom: 0;
+        right: 0;
     }
+
+    .doppler-gif {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      right: 0;
+      
+  }
 
     .arrow-container {
         width: 0%;
