--- a/source/weather.css
+++ b/source/weather.css
@@ -143,6 +143,14 @@ body {
         width: 100%;
     }
 
+    .forecast-web {
+        display: none;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+    }
+    
     div.forecast-input-container {
         display: flex;
         flex-direction: column;
@@ -348,7 +356,7 @@ body {
         width: 20%;
         font-weight: 300;
         justify-content: center;
-        margin-left: 4%;
+        margin-left: 10%;
     }
 
     .bottom-item-time {
@@ -387,6 +395,15 @@ body {
         width: 100%;
     }
 
+    .forecast-web {
+        display: none;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+    }
+    
+    
     div.forecast-input-container {
         display: flex;
         flex-direction: row;
@@ -483,10 +500,11 @@ body {
     /* hide this on mobile-view */
     .doppler {
         position: relative;
-        display: inline;
+        display: flex;
         width: 60%;
         margin-right: 10%;
         margin-left: 5%;
+        margin-bottom: 10%;
       
 
     }
@@ -506,7 +524,6 @@ body {
       width: 100%;
       bottom: 0;
       right: 0;
-      
   }
 
     .arrow-container {
@@ -532,22 +549,24 @@ body {
 @media (min-width: 791px) {
 
     header {
-        text-align: center;
-        font-size: 2.8em;
+        text-align: left;
+        font-size: 4.5em;
         color: white;
         padding-top: 1.5em;
         padding-bottom: 1.5%;
         width: 100%;
+        margin-left: 7%;
         line-height: 1.2;
     }
 
     h2 {
-        text-align: center;
-        font-size: 2.2em;
+        text-align: left;
+        font-size: 3.1em;
         font-weight: 700;
         color: #2D3091;
-        padding-bottom: 4%;
+        padding-bottom: 3%;
         width: 100%;
+        margin-left: 7%;
         margin-right: 2%;
     }
 
@@ -581,19 +600,19 @@ body {
     }
 
     .bottom-item-time {
-        font-size: 4vw;
+        font-size: 2.5vw;
         margin-top: 50%;
     }
 
     .bottom-item-image {
         display: block;
-        width: 75%;
-        margin-top: 50%;
-        margin-bottom: 50%;
+        width: 50%;
+        margin-top: 5em;
+        margin-bottom: 5em;
     }
 
     .bottom-item-temperature {
-        font-size: 10vw;
+        font-size: 5vw;
     }
 
     main {
@@ -611,8 +630,23 @@ body {
 
     /* For non-mobile views: change flex-direction to column, and use flex-wrap */
     .forecast {
+        display: none;
         flex-direction: column;
         flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .forecast-web {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+    }
+    
+    .forecast-web-box {
+        display: flex;
+        flex-direction: column;
         width: 100%;
     }
 
@@ -623,22 +657,22 @@ body {
     }
 
     p.forecast-text {
-        font-size: 1.5em;
+        font-size: 2em;
         text-align: left;
-        margin-left: 15%;
+        margin-left: 7%;
         padding-bottom: 22px;
     }
 
     .input-container {
         display: flex;
         flex-direction: row;
-        width: 60%;
+        width: 50%;
     }
 
     .input-field {
         text-align: center;
         font-size: x-large;
-        width: 75%;
+        width: 15em;
         margin-left: 3%;
         height: 1.38em;
         border: none;
@@ -649,7 +683,7 @@ body {
     }
 
     .button-style {
-        width: 25%;
+        width: 6em;
         height: 1.8em;
         margin-left: 5%;
         text-align: center;
@@ -666,15 +700,17 @@ body {
     }
 
     .weather {
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
         width: 60%;
         margin-left: 10%;
+        padding-top: 5em;
     }
 
     .current-image {
-        padding-top: 50px;
-        padding-bottom: 30px;
-        width: 40vw;
+        width: 12em;
+        padding-left: 5em;
+        padding-right: 5em;
 
     }
 
@@ -711,22 +747,35 @@ body {
 
     /* hide this on mobile-view */
     .doppler {
-        width: 60%;
-        margin-right: 10%;
-        margin-left: 5%;
+        position: relative;
+        display: flex;
+        width: 60em;
+        margin-top: 3em;
+        margin-bottom: 5em;
+        margin-left: 35em;
+
     }
 
     img.doppler {
-        width: 100%;
+        position: absolute;
+        width: 50%;
         filter: grayscale(100%);
         border-radius: 50%;
         margin-top: 20%;
+        bottom: 0;
+        right: 0;
     }
 
+    .doppler-gif {
+        position: absolute;
+        width: 50%;
+        bottom: 0;
+        right: 0;
+    }
     .arrow-container {
         width: 0%;
-        padding-bottom: 1.5em;
-        padding-top: 1.5em;
+        padding-bottom: 1em;
+        padding-top: 1em;
     }
 
     .arrow-img {
@@ -738,7 +787,8 @@ body {
     hr {
         border: none;
         border-left: 1px solid darkslategrey;
-        height: 50vh;
+        height: 45vh;
         width: 1px;
+        margin-top: 5em;
     }
 }
