--- a/source/weather.css
+++ b/source/weather.css
@@ -142,14 +142,6 @@ body {
         flex-direction: column;
         width: 100%;
     }
-
-    .forecast-web {
-        display: none;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-around;
-    }
     
     div.forecast-input-container {
         display: flex;
@@ -394,15 +386,6 @@ body {
         width: 100%;
     }
 
-    .forecast-web {
-        display: none;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-around;
-    }
-    
-    
     div.forecast-input-container {
         display: flex;
         flex-direction: row;
@@ -701,17 +684,15 @@ body {
         max-width: 20em;
         padding-right: 3em;
         order: 2;
-
     }
 
     .time-and-temp {
-        display: flex;
+        display: block;
         flex-direction: row;
         font-family: 'Saira Extra Condensed', sans-serif;
         font-weight: 100;
         line-height: 1.3;
         text-align: center;
-        order: 1;
     }
 
     .time {
