Formatted web view current image.

--- a/server/public/weather.css
+++ b/server/public/weather.css
@@ -689,6 +689,7 @@ body {
     .current-image {
         width: 100%;
         max-width: 20em;
+        padding-left: 3em;
         padding-right: 3em;
         order: 2;
     }
